***************************************************************
** MovieJukebox Release Notes
***************************************************************

MovieJukebox 2.4 BETA
---------------------
 - Enhancement  #1822 Overlay for fanart
 - Enhancement  #1823 Ability to skip genres
 - Fixed defect #1825 Order of addFrame and roundCorners changed
 - Enhancement  #1839 Only show Unwatched videos in the new categories
 - Fixes defect #1844 fileImageFile is not encoded
 - Fixed defect #1845 Fanart scanner fails to find movie when title is different than original title

MovieJukebox 2.3
----------------
 - Fixed defect  #808 Trailers: Periodic rescan option
 - Enhancement   #997 Ability to turn off 'EXTRAS' processing
 - Enhancement  #1012 Separate index.htm XSL file
 - Enhancement  #1131 Smarter location of set artwork
 - Fixed defect #1267 Titles from IMDB may include their (year/roman numeral) format
 - Fixed defect #1416 Trailer doesn't download
 - Fixed defect #1499 Allocine plugin should use new XML API
 - Fixed defect #1629 Rating problem with Allocine plugin
 - Fixed defect #1604 Set poster is not picked up correctly for series with ":" in the name
 - Fixed defect #1634 SratimPlugin - download subtitles does not work due to website redesign
 - Enhancement  #1634 Removed properties sratim.username, sratim.password, sratim.code as they are no longer required for subtitles download. 
 - Fixed defect #1655 ComingSoon plugin not run properly
 - Enhancement  #1671 Add New:TV and New:Movies categories
 - Enhancement  #1687 Only load the required poster scanner plugins
 - Enhancement  #1689 Scan folder name instead of file name
 - Fixed defect #1700 Local fanart in root directory not being used
 - Fixed defect #1702 ComingSoon plot and outline have TRAMA LUNGA & TRAMA BREVA in them
 - Fixed defect #1705 Apple Trailers URL is wrong, trailers don't download
 - Enhancement  #1706 Adding a property to toggle logical\visual Hebrew for new 200 series firmwares 