@@ -4,6 +4,7 @@
 
 MovieJukebox 2.4 BETA
 ---------------------
+ - Fixed defect #1819 WebBrowser error halts processing
  - Enhancement  #1822 Overlay for fanart
  - Enhancement  #1823 Ability to skip genres
  - Fixed defect #1825 Order of addFrame and roundCorners changed
